tests/lime/fail/tokens/label_rest/byte_93.wsa
jmp .l] .l]: push 93
